# GEOSchem_GridComp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  ChemEnv.rc  ChemEnv_ExtData.rc  ChemEnv_ExtData.yaml  GEOS_ChemEnvGridComp.F90  GEOS_ChemGridComp.F90  GEOS_ChemGridComp.rc  GNUmakefile  Lightning_mod.F90  README.md  components.yaml  lightning_toolbox_mod.F90
CARMAchem_GridComp/: CARMA_GridComp.F90  CARMA_UtilMod.F90  CARMAchem_GridCompMod.F90  CARMAchem_GridComp_ExtData.rc  CARMAchem_GridComp_ExtData.yaml  CARMAchem_MieRegistry.rc  CARMAchem_Registry.rc  CARMAchem_Registry.rc.MIXED  CARMAchem_Registry.rc.SU  CMakeLists.txt  GNUmakefile  ut_CARMA.F90
CARMAchem_GridComp/CARMA/: CHANGES  Makefile
Carbon_GridComp/: .Carbon_GridCompMod.F90.swp  CMakeLists.txt  Carbon_GridComp.rc  Carbon_GridCompMod.F90
DNA_GridComp/: CMakeLists.txt  DNA_ExtData.rc  DNA_ExtData.yaml  DNA_GridComp.rc  DNA_GridCompMod.F90  DNA_Registry.rc  GNUmakefile
GAAS_GridComp/: .GAAS_GridCompMod.F90.swp  CMakeLists.txt  GAAS_AerRegistry.rc  GAAS_AodRegistry.rc  GAAS_GridComp.rc  GAAS_GridCompMod.F90  GAAS_GridComp_ExtData.rc  GAAS_GridComp_ExtData.yaml  GAAS_Mie.rc  GAAS_Registry.rc  GNUmakefile  LDE_Mod.F90  ana_lde.F90  lde.rc
GAAS_GridComp/AMIP/: GAAS_GridComp_ExtData.yaml
GEOSCHEMchem_GridComp/: CMakeLists.txt  ChangeLog  Chem_GridCompMod.F90  FJX_spec.dat.rc  GEOSCHEMchem_ExtData.rc  GEOSCHEMchem_GridComp.rc  GEOSCHEMchem_GridCompMod.F90  GEOSCHEMchem_Registry.rc  GNUmakefile  HEMCO_Config.rc  HEMCO_DiagnFile.rc  Includes_After_Run.H  Includes_Before_Run.H  input.geos.rc
GEOSCHEMchem_GridComp/Tests/: run.csh
GEOSCHEMchem_GridComp_old/: CMakeLists.txt  GEOSCHEMchem_GridComp.rc  input.geos.rc
GEOSachem_GridComp/: CMakeLists.txt  GACL_ConstantsMod.F90  GACL_DryDepositionMod.F90  GACL_EmissionsMod.F90  GACL_ReactionRatesMod.F90  GEOS_AChemGridComp.rc  GEOS_AChemGridCompMod.F90  GEOSachem_ExtData.rc  GEOSachem_ExtData.yaml  GEOSachem_Registry.rc  GEOSachem_StateSpecs.rc  GNUmakefile
GEOSachem_GridComp/AMIP/: GEOS_AChemGridComp.rc  GEOSachem_ExtData.rc  GEOSachem_ExtData.yaml
GEOSachem_GridComp/AMIP.20C/: GEOSachem_ExtData.rc  GEOSachem_ExtData.yaml
GEOSachem_GridComp/GEOS-IT/: GEOS_AChemGridComp.rc  GEOSachem_ExtData.rc  GEOSachem_Registry.rc
GEOSachem_GridComp/GEOSIT/: GEOSachem_ExtData.rc
GEOSachem_GridComp/MERRA2/: GEOSachem_ExtData.rc
GMIchem_GridComp/: CMakeLists.txt  ChangeLog  GMIchem_GridCompMod.F90  GNUmakefile  gmi_acg.pl
GMIchem_GridComp/GMI_GridComp/: GMI_ExtData.rc  GMI_ExtData.yaml  GMI_GridComp.rc  GMI_GridCompMod.F90  GMI_Mech_Registry.rc  GMI_Registry.rc  GmiChem_GridCompClassMod.F90  GmiDepos_GridCompClassMod.F90  GmiEmiss_GridCompClassMod.F90  GmiForcingBC_GridCompClassMod.F90  GmiPhotolysis_GridCompClassMod.F90  GmiSAD_GridCompClassMod.F90  GmiSwapSpeciesBundlesMod.F90  GmiThermalRC_GridCompClassMod.F90
GOCARTng_GridComp/: CMakeLists.txt  GOCART_GridCompMod.F90  GOCARTng_GridComp.rc
GOCARTng_GridComp/DUng_GridComp/: CMakeLists.txt  DUng_GridCompMod.F90  DUng_GridComp_DU.data.rc
GOCARTng_GridComp/SSng_GridComp/: CMakeLists.txt  SSng_GridCompMod.F90  SSng_GridComp_SS.data.rc  SSng_Registry.rc
GOCARTng_GridComp/SUng_GridComp/: SUng_GridCompMod.F90
HEMCO_GridComp/: CMakeLists.txt  GNUmakefile  HEMCO_GridComp.rc  HEMCO_GridCompMod.F90  HEMCOgeosfp_Config.rc  HEMCOgeosfp_Diagn.rc  HEMCOgeosfp_ExtData.rc  HEMCOgeosfp_Spec.rc  HEMCOgmi_Config.rc  HEMCOgmi_ExtData.rc  HEMCOgmi_ExtData.yaml  HEMCOgocart2g_Config.rc  HEMCOgocart2g_Diagn.rc  HEMCOgocart2g_ExtData.rc  HEMCOgocart2g_ExtData.yaml  HEMCOgocart2g_Spec.rc  HEMCOgocart_Config.rc  HEMCOgocart_ExtData.rc
MAMchem_GridComp/: CMakeLists.txt  ChangeLog  GNUmakefile  MAM3_DataMod.F90  MAM7_DataMod.F90  MAM7_ExtData.rc  MAM7_ExtData.yaml  MAML_CoagulationMod.F90  MAML_DryDepositionMod.F90  MAML_DryRemovalMod.F90  MAML_GasAerosolExchangeMod.F90  MAML_NucleationMod.F90  MAML_OpticsMod.F90  MAML_OpticsTableMod.F90  MAML_SettlingMod.F90  MAML_SizeMod.F90  MAML_WetRemovalMod.F90  MAM_BaseMod.F90  MAM_BlackCarbonMod.F90  MAM_CoagulationMod.F90  MAM_ComponentsDataMod.F90  MAM_ConstituentsDataMod.F90  MAM_DryRemovalMod.F90  MAM_DustMod.F90  MAM_GasAerosolExchangeMod.F90  MAM_NucleationMod.F90  MAM_OrganicCarbonMod.F90  MAM_SeasaltMod.F90  MAM_SizeMod.F90  MAM_SulfateMod.F90  MAM_WetRemovalMod.F90  MAMchem_GridComp.rc  MAMchem_GridCompMod.F90  MAMchem_Registry.rc  TODO  mam_optics_calculator.F90  mam_optics_calculator.rc
MAMchem_GridComp/microphysics/: abortutils.F90  cam_logfile.F90  chem_mods.F90  constituents.F90  infnan.F90  modal_aero_amicphys.F90  modal_aero_calcsize.F90  modal_aero_coag.F90  modal_aero_data.F90  modal_aero_gasaerexch.F90  modal_aero_initialize_data.F90  modal_aero_newnuc.F90  modal_aero_wateruptake.F90  module_data_mosaic_aero.F90  module_data_mosaic_asect.F90  module_data_mosaic_asecthp.F90  (+11 more)
MATRIXchem_GridComp/: CMakeLists.txt  ChangeLog  GNUmakefile  MATRIXchem_GridComp.rc  MATRIXchem_GridCompMod.F90  MATRIXchem_Registry.rc  README
StratChem_GridComp/: CMakeLists.txt  ChangeLog  GNUmakefile  StratChem_GridCompMod.F90
TR_GridComp/: CMakeLists.txt  ChangeLog  DryDepositionGmiMod.F90  GNUmakefile  TR_ExtData.rc  TR_ExtData.yaml  TR_GravSetMod.F90  TR_GridComp---Be10.rc  TR_GridComp---Be10s.rc  TR_GridComp---Be7.rc  TR_GridComp---Be7s.rc  TR_GridComp---CH3I.rc  TR_GridComp---CO_25.rc  TR_GridComp---CO_50.rc  TR_GridComp---CO_50_ea.rc  TR_GridComp---CO_50_eu.rc  TR_GridComp---CO_50_na.rc  TR_GridComp---CO_50_sa.rc  TR_GridComp---CO_ANZ.rc  TR_GridComp---CO_ARC.rc  TR_GridComp---CO_CAM.rc  TR_GridComp---CO_CAS.rc  TR_GridComp---CO_EAS.rc  TR_GridComp---CO_EUR.rc  TR_GridComp---CO_GLB.rc  TR_GridComp---CO_MDE.rc  TR_GridComp---CO_NAF.rc  TR_GridComp---CO_NAM.rc  TR_GridComp---CO_RAF.rc  TR_GridComp---CO_RBU.rc  TR_GridComp---CO_SAM.rc  TR_GridComp---CO_SAS.rc  TR_GridComp---CO_SEA.rc  TR_GridComp---CO_from_CH4.rc  TR_GridComp---Pb210.rc  TR_GridComp---Pb210s.rc  TR_GridComp---Rn222.rc  TR_GridComp---SF6.rc  TR_GridComp---aoa.rc  TR_GridComp---aoa_bl.rc  (+11 more)
(+705 files in other folders)
